--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t rishabh1504/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t rishabhhanday/react-test -f ./client/Dockerfile.dev ./client
 script:
-  - docker run -e CI=true rishabh1504/react-test npm run test
+  - docker run -e CI=true rishabhhanday/react-test npm run test
 after_success:
-  - docker build -t rishabh1504/multi-client ./client
-  - docker build -t rishabh1504/multi-client ./server
-  - docker build -t rishabh1504/multi-worker ./worker
-  - docker build -t rishabh1504/multi-nginx ./nginx
+  - docker build -t rishabhhanday/multi-client ./client
+  - docker build -t rishabhhanday/multi-client ./server
+  - docker build -t rishabhhanday/multi-worker ./worker
+  - docker build -t rishabhhanday/multi-nginx ./nginx
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push rishabh1504/multi-client rishabh1504/multi-server rishabh1504/multi-nginx rishabh1504/multi-server rishabh1504/multi-worker
+  - docker push rishabhhanday/multi-client rishabhhanday/multi-server rishabhhanday/multi-nginx rishabhhanday/multi-server rishabhhanday/multi-worker
