fixed push commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,8 @@ after_success:
   - docker build -t rishabhhanday/multi-worker ./worker
   - docker build -t rishabhhanday/multi-nginx ./nginx
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push rishabhhanday/multi-client rishabhhanday/multi-server rishabhhanday/multi-nginx rishabhhanday/multi-server rishabhhanday/multi-worker
+  - docker push rishabhhanday/multi-client 
+  - docker push rishabhhanday/multi-server 
+  - docker push rishabhhanday/multi-nginx 
+  - docker push rishabhhanday/multi-server 
+  - docker push rishabhhanday/multi-worker
